It can be compiled

--- a/src/header-common.tex
+++ b/src/header-common.tex
@@ -19,7 +19,7 @@
 \fi
 
 %% Colorbrewer
-\input{colorbrewer}
+%\input{colorbrewer}
 
 \usepackage{mathtools}
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
